--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "tailwindcss": "3.4.3",
     "typescript": "^5.4.2",
     "vite": "^5.1.6"
+  },
+  "resolutions": {
+    "rollup": "4.24.0"
   }
 }
